<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@null"
        android:hint="@string/app_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/units_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/location">

        <RadioButton
            android:id="@+id/metric_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric" />

        <RadioButton
            android:id="@+id/imperial_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperial" />

    </RadioGroup>

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/units_group" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/language_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>